--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@contentstack/json-rte-serializer": "^2.0.0",
     "async": "^2.1.5",
+    "axios": "^1.3.4",
     "chalk": "^4.1.0",
     "fs": "0.0.1-security",
     "jsdom": "^20.0.3",
